Renamed MONGO_INITDB_DATASE to MONGO_DATABASE

--- a/mongodb/stack.yml
+++ b/mongodb/stack.yml
@@ -17,11 +17,11 @@ services:
       - MONGO_PORT=${MONGO_PORT:?ERROR MONGO_PORT NOT SET}
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME:?ERROR MONGO_INITDB_ROOT_USERNAME NOT SET}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD:?ERROR MONGO_INITDB_ROOT_PASSWORD NOT SET}
-      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE:?ERROR MONGO_INITDB_DATABASE NOT SET}
+      - MONGO_DATABASE=${MONGO_DATABASE:?ERROR MONGO_DATABASE NOT SET}
       - MONGO_USERNAME=${MONGO_USERNAME:?ERROR MONGO_USERNAME NOT SET}
       - MONGO_PASSWORD=${MONGO_PASSWORD:?ERROR MONGO_PASSWORD NOT SET}
       - MONGO_REPLSET=${MONGO_REPLSET:?ERROR MONGO_REPLSET NOT SET}
-      - DATABASE_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_INITDB_DATABASE}?authSource=admin
+      - DATABASE_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DATABASE}?authSource=admin
     networks:
       - enumverse_mongodb_net
     command: |
@@ -43,11 +43,11 @@ services:
       - MONGO_PORT=${MONGO_PORT:?ERROR MONGO_PORT NOT SET}
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME:?ERROR MONGO_INITDB_ROOT_USERNAME NOT SET}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD:?ERROR MONGO_INITDB_ROOT_PASSWORD NOT SET}
-      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE:?ERROR MONGO_INITDB_DATABASE NOT SET}
+      - MONGO_DATABASE=${MONGO_DATABASE:?ERROR MONGO_DATABASE NOT SET}
       - MONGO_USERNAME=${MONGO_USERNAME:?ERROR MONGO_USERNAME NOT SET}
       - MONGO_PASSWORD=${MONGO_PASSWORD:?ERROR MONGO_PASSWORD NOT SET}
       - MONGO_REPLSET=${MONGO_REPLSET:?ERROR MONGO_REPLSET NOT SET}
-      - DATABASE_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_INITDB_DATABASE}?authSource=admin
+      - DATABASE_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DATABASE}?authSource=admin
     networks:
       - enumverse_mongodb_net
     command: |
@@ -69,11 +69,11 @@ services:
       - MONGO_PORT=${MONGO_PORT:?ERROR MONGO_PORT NOT SET}
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME:?ERROR MONGO_INITDB_ROOT_USERNAME NOT SET}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD:?ERROR MONGO_INITDB_ROOT_PASSWORD NOT SET}
-      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE:?ERROR MONGO_INITDB_DATABASE NOT SET}
+      - MONGO_DATABASE=${MONGO_DATABASE:?ERROR MONGO_DATABASE NOT SET}
       - MONGO_USERNAME=${MONGO_USERNAME:?ERROR MONGO_USERNAME NOT SET}
       - MONGO_PASSWORD=${MONGO_PASSWORD:?ERROR MONGO_PASSWORD NOT SET}
       - MONGO_REPLSET=${MONGO_REPLSET:?ERROR MONGO_REPLSET NOT SET}
-      - DATABASE_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_INITDB_DATABASE}?authSource=admin
+      - DATABASE_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DATABASE}?authSource=admin
     networks:
       - enumverse_mongodb_net
     command: |
@@ -91,7 +91,7 @@ services:
       - MONGO_PORT=${MONGO_PORT:?ERROR MONGO_PORT NOT SET}
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME:?ERROR MONGO_INITDB_ROOT_USERNAME NOT SET}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD:?ERROR MONGO_INITDB_ROOT_PASSWORD NOT SET}
-      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE:?ERROR MONGO_INITDB_DATABASE NOT SET}
+      - MONGO_DATABASE=${MONGO_DATABASE:?ERROR MONGO_DATABASE NOT SET}
       - MONGO_USERNAME=${MONGO_USERNAME:?ERROR MONGO_USERNAME NOT SET}
       - MONGO_PASSWORD=${MONGO_PASSWORD:?ERROR MONGO_PASSWORD NOT SET}
       - MONGO_REPLSET=${MONGO_REPLSET:?ERROR MONGO_REPLSET NOT SET}
