--- a/traefik/stg-stack.yml
+++ b/traefik/stg-stack.yml
@@ -9,14 +9,15 @@ services:
       - 8080:8080
       # <--
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /var/run/docker.sock:/var/run/docker.sock
       # - ${DATA_VOLUME:?ERROR DATA_VOLUME NOT SET}/config:/etc/traefik:ro
-      # - ${DATA_VOLUME:?ERROR DATA_VOLUME NOT SET}/certs:/etc/certs:ro
-      - ${DATA_VOLUME:?ERROR DATA_VOLUME NOT SET}/data:/data
+      - ${DATA_VOLUME:?ERROR DATA_VOLUME NOT SET}/certs:/var/traefik/certs:rw
+      - ${DATA_VOLUME:?ERROR DATA_VOLUME NOT SET}/logs:/var/traefik/logs
     environment:
       - TZ=${TZ:-Africa/Lagos}
       - DOMAIN=${DOMAIN:?ERROR DOMAIN NOT SET}
       - CF_DNS_API_TOKEN=${CF_DNS_API_TOKEN:?ERROR CF_DNS_API_TOKEN NOT SET}
+      - CF_API_EMAIL=${CF_API_EMAIL:-labs@semicolon.africa}
     networks:
       - edge
     command:
@@ -29,8 +30,8 @@ services:
       - "--metrics.prometheus=true"
       - "--api.insecure=true"
       - "--api.dashboard=true"
-      # - "--log.filePath=/data/traefik.log"
-      # - "--accesslog.filePath=/data/access.log"
+      # - "--log.filePath=/var/traefik/log/traefik.log"
+      - "--accesslog.filePath=/var/traefik/logs/access.log"
       # Common Properties
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
@@ -38,6 +39,7 @@ services:
       # Docker socket
       - "--providers.docker.endpoint=unix:///var/run/docker.sock"
       # Enable Docker Swarm Provider 
+      - "--providers.swarm=true"
       - "--providers.swarm.endpoint=unix:///var/run/docker.sock"
       # - "--providers.file.filename=/data/rules.yml"
       # Watch for Swarm service changes
@@ -46,8 +48,8 @@ services:
       # Default network for swarm to connect to services
       # - "--providers.swarm.network=enumverse_frontend_net"
       # Dynamic configuation file provider 
-      - "--providers.file.directory=/etc/traefik"
-      - "--providers.file.watch=true"
+      # - "--providers.file.directory=/var/traefik/data"
+      # - "--providers.file.watch=true"
       # HTTP Entrypoints
       - "--entrypoints.web.address=:80"
       # HTTP to HTTPS redirection
@@ -58,12 +60,14 @@ services:
       - "--entrypoints.websecure.address=:443"
       - "--entrypoints.websecure.http.tls=true"
       # SSL/TLS Properties
-      - "--entrypoints.web.http.tls.certResolver=cloudflare"
+      # - "--entrypoints.web.http.tls.certResolver=cloudflare"
       - "--entrypoints.websecure.http.tls.certResolver=cloudflare"
-      - "--entrypoints.websecure.http.tls.domains[0].main=${DOMAIN:?ERROR DOMAIN NOT SET}"
-      - "--entrypoints.websecure.http.tls.domains[0].sans=*.${DOMAIN:?ERROR DOMAIN NOT SET}"
+      # - "--entrypoints.websecure.http.tls.domains[0].main=${DOMAIN:?ERROR DOMAIN NOT SET}"
+      # - "--entrypoints.websecure.http.tls.domains[0].sans=*.${DOMAIN:?ERROR DOMAIN NOT SET}"
       - "--certificatesresolvers.cloudflare.acme.email=${TF_EMAIL:-labs@semicolon.africa}"
-      - "--certificatesresolvers.cloudflare.acme.storage=/data/acme.json"
+      - "--certificatesresolvers.cloudflare.acme.storage=/var/traefik/certs/cloudflare-acme.json"
+      - "--certificatesresolvers.cloudflare.acme.caServer=https://acme-v02.api.letsencrypt.org/directory"
+      - "--certificatesresolvers.cloudflare.acme.keyType=EC256"
       - "--certificatesresolvers.cloudflare.acme.dnschallenge.provider=${TF_DNS_PROVIDER:-cloudflare}"
       - "--certificatesresolvers.cloudflare.acme.dnschallenge.resolvers=${TF_DNS_RESOLVER:-1.1.1.1:53,1.0.0.1:53}"
       - "--serverstransport.insecureskipverify=true"
@@ -73,6 +77,7 @@ services:
         - "traefik.backend=dashboard"
         - "traefik.http.routers.traefik.rule=Host(`traefik.${DOMAIN}`)"
         - "traefik.http.routers.traefik.entrypoints=websecure"
+        - "traefik.http.routers.traefik.entrypoints=web"
         - "traefik.http.routers.traefik.service=api@internal"
         - "traefik.http.routers.traefik.tls=true"
         # - "traefik.http.routers.traefik.middlewares=authelia@docker"
